@@ -111,10 +111,10 @@ function varargout = cat_parallelize(job,func,datafield)
     clear spm12def cat12;
  
     % matlab command, cprintferror=1 for simple printing        
-    matlab_cmd = sprintf(['"cat_display_matlab_PID; ' ...
+    matlab_cmd = sprintf(['" ' ...
         'global cprintferror; cprintferror=1; addpath %s %s; load %s; ' ...
         'global defaults; defaults=spm12def; clear defaults; '...
-        'global cat; cat=cat12def; clear cat;  ' ...
+        'global cat; cat=cat12def; clear cat; cat_display_matlab_PID; ' ...
         '%s(job); "'],... 
       spm('dir'),fullfile(spm('dir'),'toolbox','cat12'),tmp_name,func);
 
@@ -301,6 +301,7 @@ function varargout = cat_parallelize(job,func,datafield)
             %% update status
             %  if this task was not printed before  ( catSIDlast(i) < catSID(i) )  and 
             %  if one subject was successfully or with error processed ( any(cattime>0) || ~isempty(caterr) )
+            err.color = [0 0 0];
             if ( catSIDlast(i) < catSID(i) )  
               cid = cid + 1; 
               catSIDlast(i) = catSID(i);
